--- a/20110620_Vorau/main.tex
+++ b/20110620_Vorau/main.tex
@@ -54,7 +54,8 @@
     \item Fixed dimension and cardinality
     \item Take $car$ number of graph vertices and $dim+1$ number of colors
     \item Enumerate every possible edge-combinations and on the way drop the
-      "bad" and duplicate combinations
+      "bad" and duplicate combinations. (A little perturbation for
+      edge-transitive diagrams is possible.)
     \item Conditions:
       \begin{itemize}
 	\item Rank of vertices
