--- a/20110620_Vorau/main.tex
+++ b/20110620_Vorau/main.tex
@@ -40,12 +40,10 @@ CGTA 2011, Vorau/Austria, June 20-24, 2011
 \begin{center} On isotoxal tilings in plane and in space\end{center}
 
 \vfill
-\Tiny
-BORÓCZKI, Lajos and MOLNÁR, Emil\\
-Budapest University of Technology and Economics,\\
-MI Department of Geometry\\
-E-mail: boroczki.lajos@gmail.com\\
-emolnar@math.bme.hu\\
+\tiny
+\textbf{BORÓCZKI, Lajos} and \textbf{MOLNÁR, Emil}\\
+Budapest University of Technology and Economics, MI Department of Geometry\\
+E-mail: boroczki.lajos@gmail.com, emolnar@math.bme.hu\\
 \vfill
 
 http://www.math.bme.hu/~geometry
@@ -139,9 +137,9 @@ way.
 	\item D-diagram: $dim+1$ colored graph, which represents adjacencies of
 	  simplex-orbits
 	\item Matrix function on simplex orbits, which represents the number of
-	  simplexes (not orbits) around a $dim-2$ dimensional edge.
+	  simpleces (not orbits) around a $dim-2$ dimensional edge.
       \end{itemize}
-    \item Conditions:
+    \item Constraints:
       \begin{itemize}
 	\item Compatibility between the diagram and the matrix function.
 	\item Compatibility with baricentric subdivision
@@ -159,7 +157,7 @@ way.
       duplicate combinations.
     \item The algorithm can find the possible edge-transitive diagrams with a
       little perturbation.
-    \item Conditions:
+    \item Constraints:
       \begin{itemize}
 	\item Rank of vertices
 	\item Patterns which makes the diagram incompatible with baricentric
@@ -182,7 +180,7 @@ way.
 	  parameter values)
 	  \begin{align*}
 	    K(\leftexp{c}{\mathcal{D}}^i)=\sum_{D\in
-	    \leftexp{c}{\mathcal{D}}^i}\left(-1+\sum_{\substack{0\le j<k\le d \\
+	    \leftexp{c}{\mathcal{D}}^i}\left(-1+\sum_{\substack{0\le j<k\le 3 \\
 	    j,k\ne i}}\frac{1}{m_{jk}(D)}\right)
 	    \begin{array}{cccc}
 	      > & & S^2 \\
